2007-06-28  Jose E. Marchesi  <jemarch@gnu.org>

	* src/ps.c (ps_gettext): Bypass trailing ')' when scanning a
	postscript string.

2007-06-28  Jose E. Marchesi  <jose.marchesi@deimos-space.com>

	* NEWS (Notation): Updated for gv 3.6.3

	* README: Updated version to 3.6.3

	* doc/gv.1: Regenerated for gv 3.6.3

	* src/Makefile.am (@echo "GV*dirs): Updated copyright notices to
	2007.

	* configure.ac: Updated version to 3.6.3

	* src/main.c (main): Call `resource_buildDatabase' to get the
	application entire resources database. Then, set that database as
	the display database.

	* src/resource.c (resource_buildDatabase): Get the display
	resources database as a parameter and take care to give it
	priority over the gv system resources. Return the entire resource
	database to the caller.

2007-06-27  Jose E. Marchesi  <jemarch@gnu.org>

	* src/Ghostview.c (Input): Send 1023 new line characters to the
	postscript interpreter. This patch fixes bug #19870. Adapted from
	http://bugs.ghostscript.com/show_bug.cgi?id=689237

2007-06-25  Jose E. Marchesi  <jemarch@gnu.org>

	* src/misc.c (misc_setPageMarker): Correctly adjust the page
	window after PAGE-UP and PAGE-DOWN events. (Patch by Markus
	Steinborn).

	* src/Ghostview.c (GhostviewIsInterpreterRunning): Doesnt report
	the presence of a running gs interpreter if
	`ghostview.disable_start' is true. Patch from Debian.
	(StartInterpreter): Escape beginning minus characters from
	filenames. (Patch by Markus Steinborn).

	* src/Makefile.am (@echo "GV.gsArguments): Add `-dFIXEMEDIA' to
	the `GV.gsArguments' default resource. (Patch by Markus
	Steinborn).

	* src/Ghostview.c (StartInterpreter): Doesnt add the implicit
	"2x2" parameter to ghostscript invocation command line (patch by
	Markus Steinborn).

	* src/info.c (cb_popupInfoPopup): Return when calling gs with the
	`quiet' option (patch by John Bowman).

	* src/main.c (main): Force the `XtSetArg' call to include XtNquiet
	to True (patch by John Bowman).
